# variable_rate_planter

./: CMakeLists.txt  README.md  main.cpp  shaft_speed.h
